Cargo.toml updated

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.2.0"
 authors = ["Julien Eudine <julien@eudine.fr>"]
 description = "NS16550A UART driver."
 license = "MIT"
-readme = "README.adoc"
+readme = "README.md"
 repository = "https://github.com/jeudine/NS16550A"
 categories = ["embedded", "no-std", "hardware-support" ]
 documentation = "https://docs.rs/ns16550a"
